--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -78,7 +78,7 @@ ul.menuLinks {
 
     li.active a {
         background-color: white;
-        color: $primaryColor;
+        color: rgb(110, 24, 24);
         font-weight: $normalWeight;
     }
     z-index: 99;
