--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -28,7 +28,7 @@ ul.menuLinks {
         border-bottom: 1px solid $greyColor;
     }
     li.active a {
-        color: red;
+        color: rgb(15, 31, 118);;
     }
 }
 
